Add github link

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
         <div class="contact-links">
           <a href="mailto:jovehammer16@gmail.com">jovehammer16@gmail.com</a>
           <!-- <a href="tel:"></a> -->
+          <a href="https://github.com/jovehammer16" target="_blank" rel="noreferrer">GitHub</a>
           <a href="https://www.linkedin.com/in/jove-tsui" target="_blank" rel="noreferrer">LinkedIn</a>
         </div>
       </section>
