add blog session and blog post `Speeding Up Cancellation Processing: Batch, Dedup, and Safer Throughput`

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <a href="#about">About</a>
           <a href="#experience">Experience</a>
           <a href="#projects">Projects</a>
+          <a href="#blog">Blog</a>
           <a href="#skills">Skills</a>
           <a href="#education">Education</a>
           <a href="#contact">Contact</a>
@@ -176,6 +177,26 @@
             <h3>Engineering Focus</h3>
             <p>Software Design, Microservices, Backend APIs, Event-Driven Systems</p>
           </div>
+        </div>
+      </section>
+
+      <section id="blog" class="section container reveal">
+        <div class="section-heading">
+          <h2>Blog</h2>
+          <p>Engineering write-ups from real backend scaling work.</p>
+        </div>
+        <div class="blog-grid">
+          <article class="blog-card">
+            <p class="meta">2026-02-13</p>
+            <h3>Speeding Up Cancellation Processing: Batch, Dedup, and Safer Throughput</h3>
+            <p>
+              An anonymized backend case study on scaling cancellation/reversal processing
+              with batch consumption, bounded parallelism, and database-level idempotency.
+            </p>
+            <a class="blog-link" href="blog/speeding-up-cancellation-processing.html">
+              Read article
+            </a>
+          </article>
         </div>
       </section>
 
